ProyectoFinal/Microservicio/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> select_statement
Rule 2     statement -> insert_statement
Rule 3     statement -> delete_statement
Rule 4     statement -> update_statement
Rule 5     statement -> create_table_statement
Rule 6     statement -> drop_table_statement
Rule 7     statement -> alter_table_statement
Rule 8     statement -> truncate_statement
Rule 9     statement -> show_tables_statement
Rule 10    statement -> describe_statement
Rule 11    statement -> use_statement
Rule 12    select_statement -> SELECT column_list FROM ID where_clause SEMICOLON
Rule 13    select_statement -> SELECT STAR FROM ID where_clause SEMICOLON
Rule 14    insert_statement -> INSERT INTO ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
Rule 15    insert_statement -> INSERT INTO ID VALUES LPAREN value_list RPAREN SEMICOLON
Rule 16    delete_statement -> DELETE FROM ID where_clause SEMICOLON
Rule 17    update_statement -> UPDATE ID SET update_list where_clause SEMICOLON
Rule 18    create_table_statement -> CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON
Rule 19    drop_table_statement -> DROP TABLE ID SEMICOLON
Rule 20    alter_table_statement -> ALTER TABLE ID ADD COLUMN column_definition SEMICOLON
Rule 21    alter_table_statement -> ALTER TABLE ID MODIFY COLUMN column_definition SEMICOLON
Rule 22    truncate_statement -> TRUNCATE TABLE ID SEMICOLON
Rule 23    show_tables_statement -> SHOW TABLES SEMICOLON
Rule 24    describe_statement -> DESCRIBE ID SEMICOLON
Rule 25    use_statement -> USE ID SEMICOLON
Rule 26    column_list -> ID
Rule 27    column_list -> column_list COMMA ID
Rule 28    value_list -> value
Rule 29    value_list -> value_list COMMA value
Rule 30    value -> NUMBER
Rule 31    value -> STRING
Rule 32    value -> ID
Rule 33    where_clause -> WHERE condition
Rule 34    where_clause -> <empty>
Rule 35    condition -> ID EQUALS value
Rule 36    update_list -> ID EQUALS value
Rule 37    update_list -> update_list COMMA ID EQUALS value
Rule 38    column_definitions -> column_definition
Rule 39    column_definitions -> column_definitions COMMA column_definition
Rule 40    column_definition -> ID data_type
Rule 41    column_definition -> ID data_type column_constraints
Rule 42    column_definition -> ID VARCHAR LPAREN NUMBER RPAREN
Rule 43    column_definition -> ID VARCHAR LPAREN NUMBER RPAREN column_constraints
Rule 44    data_type -> INT
Rule 45    data_type -> VARCHAR
Rule 46    column_constraints -> column_constraint
Rule 47    column_constraints -> column_constraints column_constraint
Rule 48    column_constraint -> AUTO_INCREMENT
Rule 49    column_constraint -> PRIMARY KEY

Terminals, with rules where they appear

ADD                  : 20
ALTER                : 20 21
AUTO_INCREMENT       : 48
COLUMN               : 20 21
COMMA                : 27 29 37 39
CREATE               : 18
DELETE               : 16
DESCRIBE             : 24
DROP                 : 19
EQUALS               : 35 36 37
FROM                 : 12 13 16
ID                   : 12 13 14 15 16 17 18 19 20 21 22 24 25 26 27 32 35 36 37 40 41 42 43
INSERT               : 14 15
INT                  : 44
INTO                 : 14 15
KEY                  : 49
LPAREN               : 14 14 15 18 42 43
MODIFY               : 21
NUMBER               : 30 42 43
PRIMARY              : 49
RPAREN               : 14 14 15 18 42 43
SELECT               : 12 13
SEMICOLON            : 12 13 14 15 16 17 18 19 20 21 22 23 24 25
SET                  : 17
SHOW                 : 23
STAR                 : 13
STRING               : 31
TABLE                : 18 19 20 21 22
TABLES               : 23
TRUNCATE             : 22
UPDATE               : 17
USE                  : 25
VALUES               : 14 15
VARCHAR              : 42 43 45
WHERE                : 33
error                : 

Nonterminals, with rules where they appear

alter_table_statement : 7
column_constraint    : 46 47
column_constraints   : 41 43 47
column_definition    : 20 21 38 39
column_definitions   : 18 39
column_list          : 12 14 27
condition            : 33
create_table_statement : 5
data_type            : 40 41
delete_statement     : 3
describe_statement   : 10
drop_table_statement : 6
insert_statement     : 2
select_statement     : 1
show_tables_statement : 9
statement            : 0
truncate_statement   : 8
update_list          : 17 37
update_statement     : 4
use_statement        : 11
value                : 28 29 35 36 37
value_list           : 14 15 29
where_clause         : 12 13 16 17

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . select_statement
    (2) statement -> . insert_statement
    (3) statement -> . delete_statement
    (4) statement -> . update_statement
    (5) statement -> . create_table_statement
    (6) statement -> . drop_table_statement
    (7) statement -> . alter_table_statement
    (8) statement -> . truncate_statement
    (9) statement -> . show_tables_statement
    (10) statement -> . describe_statement
    (11) statement -> . use_statement
    (12) select_statement -> . SELECT column_list FROM ID where_clause SEMICOLON
    (13) select_statement -> . SELECT STAR FROM ID where_clause SEMICOLON
    (14) insert_statement -> . INSERT INTO ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (15) insert_statement -> . INSERT INTO ID VALUES LPAREN value_list RPAREN SEMICOLON
    (16) delete_statement -> . DELETE FROM ID where_clause SEMICOLON
    (17) update_statement -> . UPDATE ID SET update_list where_clause SEMICOLON
    (18) create_table_statement -> . CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON
    (19) drop_table_statement -> . DROP TABLE ID SEMICOLON
    (20) alter_table_statement -> . ALTER TABLE ID ADD COLUMN column_definition SEMICOLON
    (21) alter_table_statement -> . ALTER TABLE ID MODIFY COLUMN column_definition SEMICOLON
    (22) truncate_statement -> . TRUNCATE TABLE ID SEMICOLON
    (23) show_tables_statement -> . SHOW TABLES SEMICOLON
    (24) describe_statement -> . DESCRIBE ID SEMICOLON
    (25) use_statement -> . USE ID SEMICOLON

    SELECT          shift and go to state 13
    INSERT          shift and go to state 14
    DELETE          shift and go to state 15
    UPDATE          shift and go to state 16
    CREATE          shift and go to state 17
    DROP            shift and go to state 18
    ALTER           shift and go to state 19
    TRUNCATE        shift and go to state 20
    SHOW            shift and go to state 21
    DESCRIBE        shift and go to state 22
    USE             shift and go to state 23

    statement                      shift and go to state 1
    select_statement               shift and go to state 2
    insert_statement               shift and go to state 3
    delete_statement               shift and go to state 4
    update_statement               shift and go to state 5
    create_table_statement         shift and go to state 6
    drop_table_statement           shift and go to state 7
    alter_table_statement          shift and go to state 8
    truncate_statement             shift and go to state 9
    show_tables_statement          shift and go to state 10
    describe_statement             shift and go to state 11
    use_statement                  shift and go to state 12

state 1

    (0) S' -> statement .



state 2

    (1) statement -> select_statement .

    $end            reduce using rule 1 (statement -> select_statement .)


state 3

    (2) statement -> insert_statement .

    $end            reduce using rule 2 (statement -> insert_statement .)


state 4

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 5

    (4) statement -> update_statement .

    $end            reduce using rule 4 (statement -> update_statement .)


state 6

    (5) statement -> create_table_statement .

    $end            reduce using rule 5 (statement -> create_table_statement .)


state 7

    (6) statement -> drop_table_statement .

    $end            reduce using rule 6 (statement -> drop_table_statement .)


state 8

    (7) statement -> alter_table_statement .

    $end            reduce using rule 7 (statement -> alter_table_statement .)


state 9

    (8) statement -> truncate_statement .

    $end            reduce using rule 8 (statement -> truncate_statement .)


state 10

    (9) statement -> show_tables_statement .

    $end            reduce using rule 9 (statement -> show_tables_statement .)


state 11

    (10) statement -> describe_statement .

    $end            reduce using rule 10 (statement -> describe_statement .)


state 12

    (11) statement -> use_statement .

    $end            reduce using rule 11 (statement -> use_statement .)


state 13

    (12) select_statement -> SELECT . column_list FROM ID where_clause SEMICOLON
    (13) select_statement -> SELECT . STAR FROM ID where_clause SEMICOLON
    (26) column_list -> . ID
    (27) column_list -> . column_list COMMA ID

    STAR            shift and go to state 26
    ID              shift and go to state 25

    column_list                    shift and go to state 24

state 14

    (14) insert_statement -> INSERT . INTO ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (15) insert_statement -> INSERT . INTO ID VALUES LPAREN value_list RPAREN SEMICOLON

    INTO            shift and go to state 27


state 15

    (16) delete_statement -> DELETE . FROM ID where_clause SEMICOLON

    FROM            shift and go to state 28


state 16

    (17) update_statement -> UPDATE . ID SET update_list where_clause SEMICOLON

    ID              shift and go to state 29


state 17

    (18) create_table_statement -> CREATE . TABLE ID LPAREN column_definitions RPAREN SEMICOLON

    TABLE           shift and go to state 30


state 18

    (19) drop_table_statement -> DROP . TABLE ID SEMICOLON

    TABLE           shift and go to state 31


state 19

    (20) alter_table_statement -> ALTER . TABLE ID ADD COLUMN column_definition SEMICOLON
    (21) alter_table_statement -> ALTER . TABLE ID MODIFY COLUMN column_definition SEMICOLON

    TABLE           shift and go to state 32


state 20

    (22) truncate_statement -> TRUNCATE . TABLE ID SEMICOLON

    TABLE           shift and go to state 33


state 21

    (23) show_tables_statement -> SHOW . TABLES SEMICOLON

    TABLES          shift and go to state 34


state 22

    (24) describe_statement -> DESCRIBE . ID SEMICOLON

    ID              shift and go to state 35


state 23

    (25) use_statement -> USE . ID SEMICOLON

    ID              shift and go to state 36


state 24

    (12) select_statement -> SELECT column_list . FROM ID where_clause SEMICOLON
    (27) column_list -> column_list . COMMA ID

    FROM            shift and go to state 37
    COMMA           shift and go to state 38


state 25

    (26) column_list -> ID .

    FROM            reduce using rule 26 (column_list -> ID .)
    COMMA           reduce using rule 26 (column_list -> ID .)
    RPAREN          reduce using rule 26 (column_list -> ID .)


state 26

    (13) select_statement -> SELECT STAR . FROM ID where_clause SEMICOLON

    FROM            shift and go to state 39


state 27

    (14) insert_statement -> INSERT INTO . ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (15) insert_statement -> INSERT INTO . ID VALUES LPAREN value_list RPAREN SEMICOLON

    ID              shift and go to state 40


state 28

    (16) delete_statement -> DELETE FROM . ID where_clause SEMICOLON

    ID              shift and go to state 41


state 29

    (17) update_statement -> UPDATE ID . SET update_list where_clause SEMICOLON

    SET             shift and go to state 42


state 30

    (18) create_table_statement -> CREATE TABLE . ID LPAREN column_definitions RPAREN SEMICOLON

    ID              shift and go to state 43


state 31

    (19) drop_table_statement -> DROP TABLE . ID SEMICOLON

    ID              shift and go to state 44


state 32

    (20) alter_table_statement -> ALTER TABLE . ID ADD COLUMN column_definition SEMICOLON
    (21) alter_table_statement -> ALTER TABLE . ID MODIFY COLUMN column_definition SEMICOLON

    ID              shift and go to state 45


state 33

    (22) truncate_statement -> TRUNCATE TABLE . ID SEMICOLON

    ID              shift and go to state 46


state 34

    (23) show_tables_statement -> SHOW TABLES . SEMICOLON

    SEMICOLON       shift and go to state 47


state 35

    (24) describe_statement -> DESCRIBE ID . SEMICOLON

    SEMICOLON       shift and go to state 48


state 36

    (25) use_statement -> USE ID . SEMICOLON

    SEMICOLON       shift and go to state 49


state 37

    (12) select_statement -> SELECT column_list FROM . ID where_clause SEMICOLON

    ID              shift and go to state 50


state 38

    (27) column_list -> column_list COMMA . ID

    ID              shift and go to state 51


state 39

    (13) select_statement -> SELECT STAR FROM . ID where_clause SEMICOLON

    ID              shift and go to state 52


state 40

    (14) insert_statement -> INSERT INTO ID . LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (15) insert_statement -> INSERT INTO ID . VALUES LPAREN value_list RPAREN SEMICOLON

    LPAREN          shift and go to state 53
    VALUES          shift and go to state 54


state 41

    (16) delete_statement -> DELETE FROM ID . where_clause SEMICOLON
    (33) where_clause -> . WHERE condition
    (34) where_clause -> .

    WHERE           shift and go to state 56
    SEMICOLON       reduce using rule 34 (where_clause -> .)

    where_clause                   shift and go to state 55

state 42

    (17) update_statement -> UPDATE ID SET . update_list where_clause SEMICOLON
    (36) update_list -> . ID EQUALS value
    (37) update_list -> . update_list COMMA ID EQUALS value

    ID              shift and go to state 57

    update_list                    shift and go to state 58

state 43

    (18) create_table_statement -> CREATE TABLE ID . LPAREN column_definitions RPAREN SEMICOLON

    LPAREN          shift and go to state 59


state 44

    (19) drop_table_statement -> DROP TABLE ID . SEMICOLON

    SEMICOLON       shift and go to state 60


state 45

    (20) alter_table_statement -> ALTER TABLE ID . ADD COLUMN column_definition SEMICOLON
    (21) alter_table_statement -> ALTER TABLE ID . MODIFY COLUMN column_definition SEMICOLON

    ADD             shift and go to state 61
    MODIFY          shift and go to state 62


state 46

    (22) truncate_statement -> TRUNCATE TABLE ID . SEMICOLON

    SEMICOLON       shift and go to state 63


state 47

    (23) show_tables_statement -> SHOW TABLES SEMICOLON .

    $end            reduce using rule 23 (show_tables_statement -> SHOW TABLES SEMICOLON .)


state 48

    (24) describe_statement -> DESCRIBE ID SEMICOLON .

    $end            reduce using rule 24 (describe_statement -> DESCRIBE ID SEMICOLON .)


state 49

    (25) use_statement -> USE ID SEMICOLON .

    $end            reduce using rule 25 (use_statement -> USE ID SEMICOLON .)


state 50

    (12) select_statement -> SELECT column_list FROM ID . where_clause SEMICOLON
    (33) where_clause -> . WHERE condition
    (34) where_clause -> .

    WHERE           shift and go to state 56
    SEMICOLON       reduce using rule 34 (where_clause -> .)

    where_clause                   shift and go to state 64

state 51

    (27) column_list -> column_list COMMA ID .

    FROM            reduce using rule 27 (column_list -> column_list COMMA ID .)
    COMMA           reduce using rule 27 (column_list -> column_list COMMA ID .)
    RPAREN          reduce using rule 27 (column_list -> column_list COMMA ID .)


state 52

    (13) select_statement -> SELECT STAR FROM ID . where_clause SEMICOLON
    (33) where_clause -> . WHERE condition
    (34) where_clause -> .

    WHERE           shift and go to state 56
    SEMICOLON       reduce using rule 34 (where_clause -> .)

    where_clause                   shift and go to state 65

state 53

    (14) insert_statement -> INSERT INTO ID LPAREN . column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (26) column_list -> . ID
    (27) column_list -> . column_list COMMA ID

    ID              shift and go to state 25

    column_list                    shift and go to state 66

state 54

    (15) insert_statement -> INSERT INTO ID VALUES . LPAREN value_list RPAREN SEMICOLON

    LPAREN          shift and go to state 67


state 55

    (16) delete_statement -> DELETE FROM ID where_clause . SEMICOLON

    SEMICOLON       shift and go to state 68


state 56

    (33) where_clause -> WHERE . condition
    (35) condition -> . ID EQUALS value

    ID              shift and go to state 70

    condition                      shift and go to state 69

state 57

    (36) update_list -> ID . EQUALS value

    EQUALS          shift and go to state 71


state 58

    (17) update_statement -> UPDATE ID SET update_list . where_clause SEMICOLON
    (37) update_list -> update_list . COMMA ID EQUALS value
    (33) where_clause -> . WHERE condition
    (34) where_clause -> .

    COMMA           shift and go to state 73
    WHERE           shift and go to state 56
    SEMICOLON       reduce using rule 34 (where_clause -> .)

    where_clause                   shift and go to state 72

state 59

    (18) create_table_statement -> CREATE TABLE ID LPAREN . column_definitions RPAREN SEMICOLON
    (38) column_definitions -> . column_definition
    (39) column_definitions -> . column_definitions COMMA column_definition
    (40) column_definition -> . ID data_type
    (41) column_definition -> . ID data_type column_constraints
    (42) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN
    (43) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN column_constraints

    ID              shift and go to state 74

    column_definitions             shift and go to state 75
    column_definition              shift and go to state 76

state 60

    (19) drop_table_statement -> DROP TABLE ID SEMICOLON .

    $end            reduce using rule 19 (drop_table_statement -> DROP TABLE ID SEMICOLON .)


state 61

    (20) alter_table_statement -> ALTER TABLE ID ADD . COLUMN column_definition SEMICOLON

    COLUMN          shift and go to state 77


state 62

    (21) alter_table_statement -> ALTER TABLE ID MODIFY . COLUMN column_definition SEMICOLON

    COLUMN          shift and go to state 78


state 63

    (22) truncate_statement -> TRUNCATE TABLE ID SEMICOLON .

    $end            reduce using rule 22 (truncate_statement -> TRUNCATE TABLE ID SEMICOLON .)


state 64

    (12) select_statement -> SELECT column_list FROM ID where_clause . SEMICOLON

    SEMICOLON       shift and go to state 79


state 65

    (13) select_statement -> SELECT STAR FROM ID where_clause . SEMICOLON

    SEMICOLON       shift and go to state 80


state 66

    (14) insert_statement -> INSERT INTO ID LPAREN column_list . RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (27) column_list -> column_list . COMMA ID

    RPAREN          shift and go to state 81
    COMMA           shift and go to state 38


state 67

    (15) insert_statement -> INSERT INTO ID VALUES LPAREN . value_list RPAREN SEMICOLON
    (28) value_list -> . value
    (29) value_list -> . value_list COMMA value
    (30) value -> . NUMBER
    (31) value -> . STRING
    (32) value -> . ID

    NUMBER          shift and go to state 85
    STRING          shift and go to state 86
    ID              shift and go to state 82

    value_list                     shift and go to state 83
    value                          shift and go to state 84

state 68

    (16) delete_statement -> DELETE FROM ID where_clause SEMICOLON .

    $end            reduce using rule 16 (delete_statement -> DELETE FROM ID where_clause SEMICOLON .)


state 69

    (33) where_clause -> WHERE condition .

    SEMICOLON       reduce using rule 33 (where_clause -> WHERE condition .)


state 70

    (35) condition -> ID . EQUALS value

    EQUALS          shift and go to state 87


state 71

    (36) update_list -> ID EQUALS . value
    (30) value -> . NUMBER
    (31) value -> . STRING
    (32) value -> . ID

    NUMBER          shift and go to state 85
    STRING          shift and go to state 86
    ID              shift and go to state 82

    value                          shift and go to state 88

state 72

    (17) update_statement -> UPDATE ID SET update_list where_clause . SEMICOLON

    SEMICOLON       shift and go to state 89


state 73

    (37) update_list -> update_list COMMA . ID EQUALS value

    ID              shift and go to state 90


state 74

    (40) column_definition -> ID . data_type
    (41) column_definition -> ID . data_type column_constraints
    (42) column_definition -> ID . VARCHAR LPAREN NUMBER RPAREN
    (43) column_definition -> ID . VARCHAR LPAREN NUMBER RPAREN column_constraints
    (44) data_type -> . INT
    (45) data_type -> . VARCHAR

    VARCHAR         shift and go to state 92
    INT             shift and go to state 93

    data_type                      shift and go to state 91

state 75

    (18) create_table_statement -> CREATE TABLE ID LPAREN column_definitions . RPAREN SEMICOLON
    (39) column_definitions -> column_definitions . COMMA column_definition

    RPAREN          shift and go to state 94
    COMMA           shift and go to state 95


state 76

    (38) column_definitions -> column_definition .

    RPAREN          reduce using rule 38 (column_definitions -> column_definition .)
    COMMA           reduce using rule 38 (column_definitions -> column_definition .)


state 77

    (20) alter_table_statement -> ALTER TABLE ID ADD COLUMN . column_definition SEMICOLON
    (40) column_definition -> . ID data_type
    (41) column_definition -> . ID data_type column_constraints
    (42) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN
    (43) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN column_constraints

    ID              shift and go to state 74

    column_definition              shift and go to state 96

state 78

    (21) alter_table_statement -> ALTER TABLE ID MODIFY COLUMN . column_definition SEMICOLON
    (40) column_definition -> . ID data_type
    (41) column_definition -> . ID data_type column_constraints
    (42) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN
    (43) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN column_constraints

    ID              shift and go to state 74

    column_definition              shift and go to state 97

state 79

    (12) select_statement -> SELECT column_list FROM ID where_clause SEMICOLON .

    $end            reduce using rule 12 (select_statement -> SELECT column_list FROM ID where_clause SEMICOLON .)


state 80

    (13) select_statement -> SELECT STAR FROM ID where_clause SEMICOLON .

    $end            reduce using rule 13 (select_statement -> SELECT STAR FROM ID where_clause SEMICOLON .)


state 81

    (14) insert_statement -> INSERT INTO ID LPAREN column_list RPAREN . VALUES LPAREN value_list RPAREN SEMICOLON

    VALUES          shift and go to state 98


state 82

    (32) value -> ID .

    RPAREN          reduce using rule 32 (value -> ID .)
    COMMA           reduce using rule 32 (value -> ID .)
    WHERE           reduce using rule 32 (value -> ID .)
    SEMICOLON       reduce using rule 32 (value -> ID .)


state 83

    (15) insert_statement -> INSERT INTO ID VALUES LPAREN value_list . RPAREN SEMICOLON
    (29) value_list -> value_list . COMMA value

    RPAREN          shift and go to state 99
    COMMA           shift and go to state 100


state 84

    (28) value_list -> value .

    RPAREN          reduce using rule 28 (value_list -> value .)
    COMMA           reduce using rule 28 (value_list -> value .)


state 85

    (30) value -> NUMBER .

    RPAREN          reduce using rule 30 (value -> NUMBER .)
    COMMA           reduce using rule 30 (value -> NUMBER .)
    WHERE           reduce using rule 30 (value -> NUMBER .)
    SEMICOLON       reduce using rule 30 (value -> NUMBER .)


state 86

    (31) value -> STRING .

    RPAREN          reduce using rule 31 (value -> STRING .)
    COMMA           reduce using rule 31 (value -> STRING .)
    WHERE           reduce using rule 31 (value -> STRING .)
    SEMICOLON       reduce using rule 31 (value -> STRING .)


state 87

    (35) condition -> ID EQUALS . value
    (30) value -> . NUMBER
    (31) value -> . STRING
    (32) value -> . ID

    NUMBER          shift and go to state 85
    STRING          shift and go to state 86
    ID              shift and go to state 82

    value                          shift and go to state 101

state 88

    (36) update_list -> ID EQUALS value .

    COMMA           reduce using rule 36 (update_list -> ID EQUALS value .)
    WHERE           reduce using rule 36 (update_list -> ID EQUALS value .)
    SEMICOLON       reduce using rule 36 (update_list -> ID EQUALS value .)


state 89

    (17) update_statement -> UPDATE ID SET update_list where_clause SEMICOLON .

    $end            reduce using rule 17 (update_statement -> UPDATE ID SET update_list where_clause SEMICOLON .)


state 90

    (37) update_list -> update_list COMMA ID . EQUALS value

    EQUALS          shift and go to state 102


state 91

    (40) column_definition -> ID data_type .
    (41) column_definition -> ID data_type . column_constraints
    (46) column_constraints -> . column_constraint
    (47) column_constraints -> . column_constraints column_constraint
    (48) column_constraint -> . AUTO_INCREMENT
    (49) column_constraint -> . PRIMARY KEY

    RPAREN          reduce using rule 40 (column_definition -> ID data_type .)
    COMMA           reduce using rule 40 (column_definition -> ID data_type .)
    SEMICOLON       reduce using rule 40 (column_definition -> ID data_type .)
    AUTO_INCREMENT  shift and go to state 105
    PRIMARY         shift and go to state 106
